@@ -9,6 +9,10 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 
+06/23/02 russ
+
+	* added dCloseODE(), contributed by Nate Waddoups and David McClurg.
+
 05/16/02 russ
 
 	* added dSpaceQuery(), contributed by Nate Waddoups.
